# jonsengine

./: .gitmodules  CMakeLists.txt  JonsEngine.sln  ProjectHome.md  README.md
Example/: CMakeLists.txt  ExampleGame.vcxproj  ExampleGame.vcxproj.filters  Game.cpp  Game.h  SceneActors.cpp  SceneActors.h  SceneTessellation.cpp  SceneTessellation.h  Sun.cpp  Sun.h  main.cpp
Example/include/: Game.h  Scene.h  SceneTessellation.h  Sun.h
Example/src/: Game.cpp  Scene.cpp  SceneTessellation.cpp  Sun.cpp  main.cpp
JonsEngine/: CMakeLists.txt  JonsEngine.natvis  JonsEngine.sln  JonsEngine.vcxproj  JonsEngine.vcxproj.filters  JonsEngineCommon.props
JonsEngine/Core/: CMakeLists.txt  DebugOptions.h  Engine.cpp  Engine.h  EngineSettings.h  Platform.h  Types.h
JonsEngine/Core/Containers/: CMakeLists.txt  DataPool.hpp  FixedGridQuadTree.hpp  IDMap.hpp  IDMapBase.hpp  IDMapPointer.hpp  IDMapTree.hpp  RangedIterator.hpp
JonsEngine/Core/Logging/: CMakeLists.txt  LogManager.cpp  LogManager.h  Logger.cpp  Logger.h  OutputStream.cpp  OutputStream.h  StreamBuf.cpp  StreamBuf.h
JonsEngine/Core/Math/: AABB.cpp  AABB.h  CMakeLists.txt  Frustum.cpp  Frustum.h  Intersection.cpp  Intersection.h  Math.cpp  MathUtils.cpp  MathUtils.h  Plane.cpp  Plane.h
JonsEngine/Core/Memory/: CMakeLists.txt  HeapAligned.h  HeapAllocator.cpp  HeapAllocator.h
JonsEngine/Core/Platform/: CMakeLists.txt  Directx11.h  Windows.h
JonsEngine/Core/Utils/: CMakeLists.txt  Clock.hpp  Error.h  IDGenerator.hpp  NonCopyable.h  TOMLParser.cpp  TOMLParser.h  TimeUtils.h  Timer.cpp  Timer.h
JonsEngine/RenderQueue/: CMakeLists.txt  RenderQueue.cpp  RenderQueue.h  RenderQueueTypes.h
JonsEngine/Renderer/: CMakeLists.txt  RenderDefs.cpp  RenderDefs.h  RenderSettings.h  Shapes.cpp  Shapes.h
JonsEngine/Renderer/DirectX11/: CMakeLists.txt  DX11AABBPass.cpp  DX11AABBPass.h  DX11AmbientPass.cpp  DX11AmbientPass.h  DX11Backbuffer.cpp  DX11Backbuffer.h  DX11BoxBlurPass.cpp  DX11BoxBlurPass.h  DX11Buffer.hpp  DX11CPUDynamicBuffer.cpp  DX11CPUDynamicBuffer.h  DX11ConstantBuffer.hpp  DX11Context.cpp  DX11Context.h  DX11DepthBufferReadback.cpp  DX11DepthBufferReadback.h  DX11DepthReductionPass.cpp  DX11DepthReductionPass.h  DX11DirectionalLightPass.cpp  DX11DirectionalLightPass.h  DX11DynamicTexture.cpp  DX11DynamicTexture.h  DX11FullscreenTrianglePass.cpp  DX11FullscreenTrianglePass.h  DX11GBuffer.h  DX11Gbuffer.cpp  DX11IndexBuffer.cpp  DX11IndexBuffer.h  DX11LightAccumulationbuffer.cpp  DX11LightAccumulationbuffer.h  DX11Mesh.cpp  DX11Mesh.h  DX11Pipeline.cpp  DX11Pipeline.h  DX11PointLightPass.cpp  DX11PointLightPass.h  DX11PostProcessor.cpp  DX11PostProcessor.h  DX11RenderTarget2D.cpp  (+25 more)
JonsEngine/Resources/: Animation.cpp  Animation.h  AnimationInstance.cpp  AnimationInstance.h  Bone.cpp  Bone.h  BoneKeyframe.cpp  BoneKeyframe.h  CMakeLists.txt  JonsPackage.cpp  JonsPackage.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  ModelNode.cpp  ModelNode.h  ResourceManifest.cpp  ResourceManifest.h  Skybox.cpp  Skybox.h  TerrainData.cpp  TerrainData.h
JonsEngine/Scene/: AnimatedActor.cpp  AnimatedActor.h  AnimationUpdater.cpp  AnimationUpdater.h  BaseActor.cpp  BaseActor.h  CMakeLists.txt  Camera.cpp  Camera.h  DirectionalLight.cpp  DirectionalLight.h  PointLight.cpp  PointLight.h  Scene.cpp  Scene.h  SceneDirtyFlags.h  SceneManager.cpp  SceneManager.h  SceneNode.cpp  SceneNode.h  SceneParser.cpp  SceneParser.h  SceneSettings.h  StaticActor.cpp  StaticActor.h  Terrain.cpp  Terrain.h  TerrainQuadTree.cpp  TerrainQuadTree.h  TerrainTransforms.cpp  TerrainTransforms.h
JonsEngine/Shaders/: AmbientPixel.hlsl  AvgLuminance.hlsl  BoxBlurPixel.hlsl  CMakeLists.txt  Common.hlsl  Constants.hlsl  DepthReadback.hlsl  DirectionalLightPCF2X2Pixel.hlsl  DirectionalLightPCF5X5Pixel.hlsl  DirectionalLightPixel.hlsl  FXAAPixel.hlsl  FullscreenTriangle.hlsl  FullscreenTriangleTexcoord.hlsl  GBufferPixel.hlsl  GBufferVertex.hlsl  GBufferVertexAnimated.hlsl  PointLightPixel.hlsl  SDSMFinalCompute.hlsl  SDSMInitialCompute.hlsl  SSAOPixel.hlsl  Shadowmapping.hlsl  SimpleColorPixel.hlsl  SimpleTexturePixel.hlsl  SkyboxPixel.hlsl  TerrainCommon.hlsl  TerrainComputeAltitude.hlsl  TerrainComputeAverageAltitude.hlsl  TerrainComputeAverageAltitudeFinal.hlsl  TerrainComputeCoplanarity.hlsl  TerrainComputeCoplanarity16.hlsl  TerrainComputeCoplanarity32.hlsl  TerrainComputeCoplanarity64.hlsl  TerrainComputeCoplanarity8.hlsl  TerrainComputeJFA.hlsl  TerrainComputeMoisture.hlsl  TerrainComputeNormal.hlsl  TerrainDomain.hlsl  TerrainDomainDebugCoplanarity.hlsl  TerrainHull.hlsl  TerrainHullDebugCoplanarity.hlsl  (+19 more)
JonsEngine/Window/: CMakeLists.txt  KeyCallback.h  KeyDefinition.h  MouseCallback.h  WindowManager.cpp  WindowManager.h  WindowSettings.h
JonsEngine/include/Core/: DebugOptions.h  Engine.h  EngineDefs.h  EngineSettings.h  Types.h
JonsEngine/include/RenderQueue/: AABBRenderData.h  RenderQueue.h  RenderQueueTypes.h  Renderable.h  RenderableBone.h  RenderableCamera.h  RenderableCollection.h  RenderableContainer.h  RenderableDirectionalLight.h  RenderableDirectionalLigth.h  RenderableMaterial.h  RenderableMesh.h  RenderablePointLight.h  RenderableSkeleton.h  RenderableTerrain.h
JonsEngine/include/Renderer/: RenderCommands.h  RenderDefs.h  RenderQueue.h  RenderSettings.h  Shapes.h
JonsEngine/include/Resources/: Animation.h  AnimationInstance.h  AnimationManager.h  Bone.h  BoneAnimation.h  BoneKeyframe.h  JonsPackage.h  Material.h  Mesh.h  Model.h  ModelAnimation.h  ModelNode.h  ResourceManifest.h  Skybox.h  TerrainData.h  Texture.h
JonsEngine/include/Scene/: Actor.h  AnimatedActor.h  Animation.h  AnimationHandler.h  AnimationInstance.h  AnimationUpdater.h  BaseActor.h  Camera.h  DirectionalLight.h  Material.h  Mesh.h  Model.h  ModelNode.h  PointLight.h  Scene.h  (+7 more)
Tools/AssetImporter/: AssetImporter.cpp  AssetImporter.h  AssetImporter.vcxproj  AssetImporter.vcxproj.filters  Assimp.cpp  Assimp.h  CMakeLists.txt  FreeImage.cpp  FreeImage.h  FreeImageParser.cpp  FreeImageParser.h  TOMLParser.cpp  TOMLParser.h  Utils.cpp  Utils.h  main.cpp
(+841 files in other folders)
